unfinished incluster, a bit of refactor

--- a/fixtures/ca-from-file.yaml
+++ b/fixtures/ca-from-file.yaml
@@ -11,7 +11,7 @@ contexts:
 - context:
     cluster: my-cluster
     namespace: frontend
-    user: green-user
+    user: developer
   name: my-context
 users:
 - name: green-user
