--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2018"
 serde = "1.0.97"
 serde_derive = "1.0.97"
 serde_yaml = "0.8.9"
-serde_json = "*"
+serde_json = "1.0.*"
 failure = "0.1.5"
 base64 = "0.10"
 dirs = "2.0.2"
 openssl = "0.10.25"
 reqwest = "0.9.22"
+lazy_static = "1.4.*"
